<resources>
    <string name="app_name">PopCornFactory</string>
    <string name="welcome">Welcome to Porpcorn Factory, home of the best series and movies.
    Just lay down, make some popcorn and enjoy!</string>
    <string name="btn_text">GET ME IN!</string>
    <string name="movies">MOVIES</string>
    <string name="series">SERIES</string>
    <string name="detalle_compra">DETALLE DE COMPRA</string>
    <string name="nombre_cliente">Nombre del comprador</string>
    <string name="tipo_pago">Tipo de pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">Tarjeta de credito/debito</string>
    <string name="buy">Buy</string>
    <string name="seat">Chosen Seat</string>
</resources>