<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main"
    tools:context=".DetalleCompra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_compra"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/tittleSeats"
            android:textColor="@color/btn_color" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/btn_color"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/nombre_comprador"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_color"
        android:hint="@string/nombre_cliente"
        android:textColorHint="@color/text_main"
        android:textColor="@color/text_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_pago"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/text_main" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/text_main"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGruop"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main"
            android:textSize="18sp"
            android:text="@string/efectivo" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main"
            android:textSize="18sp"
            android:text="@string/tarjeta" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/text_main" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/text_main"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/num_seat"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/radio_normal"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/background_main" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_main"
        android:textColor="@color/background_main"
        android:text="@string/buy"
        android:paddingHorizontal="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/buy"/>

</LinearLayout>